--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@
   pointer-events: none;
 }
 
+.header-table {
+  display: flex;
+  justify-content: space-between;
+}
+
 @media ( prefers-reduced-motion : no-preference ) {
 
   .App-logo {
